Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • A amd
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 350
    • Issues 350
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 0
    • Merge requests 0
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • drm
  • amd
  • Issues
  • #1081
Closed
Open
Issue created Mar 27, 2020 by Dávid Bíró@dbiro97

[drm:amdgpu_pci_remove [amdgpu]] *ERROR* hotplug removal is not supported

TL;DR

AMDGPU driver currently cannot handle hotplug and hot unplug.

Introduction

Since Intel introduced thunderbolt, which connects to the PCI-e bus, eGPUs became a reality. On the hardware level, PCI-e supports hotplug. Hotplug is necessary for mobility, which is one of the main reasons for buying an eGPU. AMDGPU driver currently cannot handle hotplug and hotplug removal. And AMD sells cards with promising hotplug features and Linux support.

Current behavior

The system goes into an unrecoverable state.

Expected behavior

  • Removal using one external graphics card only:
    • User: unplugs the cable
    • Driver: somehow notifies the display server to reinitialize the graphics on another video card.
    • Driver: unloads itself.
    • Display server (X.Org, Wayland): updates the screen layout, reinitializes the graphics.
    • WM: handles new screen layout, and moves windows to the available screens.
  • Hotplug:
    • User: plugs the cable into the running system
    • Kernel: starts the driver, and somehow notifies the display server about the newly available screens

Expected behavior for the early stages

  • User: unplugs the cable
  • Driver: manages somehow to kill the display server (X.Org).
  • Login Manager: shows up, because the user session is closed.
Edited Jul 22, 2020 by Dávid Bíró
Assignee
Assign to
Time tracking